feat: add live and readiness

--- a/charts/base/templates/deployment.yaml
+++ b/charts/base/templates/deployment.yaml
@@ -39,14 +39,12 @@ spec:
             - name: http
               containerPort: 80
               protocol: TCP
+          {{- if .Values.probes.enabled  }}
           livenessProbe:
-            httpGet:
-              path: /
-              port: http
+            {{- toYaml .Values.probes.livenessProbe | nindent 12 }}
           readinessProbe:
-            httpGet:
-              path: /
-              port: http
+            {{- toYaml .Values.probes.readinessProbe | nindent 12 }}
+          {{- end }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
