--- a/charts/base/values.yaml
+++ b/charts/base/values.yaml
@@ -73,6 +73,16 @@ autoscaling:
   maxReplicas: 100
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
+probes:
+  enabled: true
+  livenessProbe:
+    httpGet:
+    path: /
+    port: http
+  readinessProbe:
+    httpGet:
+    path: /
+    port: http
 
 nodeSelector: {}
 
